--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,8 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+    background-color: #1d1d1d !important;
+
 }
+
