Ajustando mouse trail e adicionando o titulo

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    font-family: 'Open Sans';
 }
 
 body{
     background-color: #1d1d1d !important;
+    font-family: 'Open Sans';
 
 }
 
